# share-the-mark

./: .gitignore  .prettierignore  .release-please-manifest.json  1echo  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SPEC.md  eslint.config.ts  install.sh  lefthook.yml  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  release-please-config.json  size-limit.config.ts  tsconfig.json  vitest.config.ts  wxt.config.ts
.github/workflows/: ci.yml  deploy-docs.yml  release-cli.yml  release-embed.yml  release-extension.yml  release-please.yml
cli/: CHANGELOG.md  Cargo.toml  build.rs
cli/skill/share-the-mark/: SKILL.md
cli/src/: cli.rs  daemon.rs  embed.rs  links.rs  main.rs  request.rs  requests.rs  server.rs  setup.rs  skill.rs  store.rs
demo/: index.html
docs/: agent-integration.md  development.md  embedding.md  index.md  installation.md  overview.md  permissions-privacy.md  usage.md
docs/_readme/: footer.md  header.md
entrypoints/: background.ts  content.ts  theme.css
entrypoints/options/: App.tsx  index.html  main.tsx  style.css
entrypoints/popup/: App.tsx  index.html  main.tsx  style.css
scripts/: build-embed.mjs  capture-demo.mjs  check-permissions.mjs  generate-readme.mjs  render-icon.mjs  submit-chrome.mjs
src/anchor/: anchor.ts  dom-anchor.d.ts  index.ts  text-anchor.ts
src/capture/: clipboard-sink.ts  composite-surface.ts  composite.ts  daemon-sink.ts  index.ts  render.ts  screenshot.ts
src/core/: health.ts  links.ts
src/core/agent/: connection.ts
src/core/export/: binding-sink.ts  export.ts  index.ts
src/core/markdown/: markdown.ts
src/core/model/: changelog.ts  geometry.ts  index.ts
src/core/selector/: selector.ts
src/core/share/: share.ts
src/core/version/: version.ts
src/embed/: base64.ts  index.ts  local-submit.ts  local.ts  mount.ts  playwright-runner.ts  playwright.ts  ports.ts  screenshot.ts  session.ts  standalone.ts  storage.ts  widget.ts
src/messaging/: protocol.ts
src/overlay/: edit.ts  geometry.ts  hit-test.ts  index.ts  overlay.ts  svg.ts
src/panel/: ChangelogPanel.tsx  PanelApp.tsx  capabilities.ts  index.ts  keyboard-isolation.ts  panel.css
src/share/: import.ts  index.ts  token.ts
src/storage/: changelog-store.ts  index.ts  pending-import.ts  settings-defaults.ts  settings.ts
src/theme/: apply-theme.ts
src/ui/: Button.tsx  controls.css  use-copy.ts
store/: LISTING.md
tests/: setup.ts
tests/e2e/: annotate.spec.ts  chrome-global.d.ts  cli-local-serve.spec.ts  embed-playwright.spec.ts  embed-widget.spec.ts  fixtures.ts  screenshots.spec.ts  smoke.spec.ts
tests/fixtures/: composite.ts  demo.html  page.html
tests/integration/: clipboard.test.ts  embed-session.test.ts  messaging.test.ts  overlay-edit.test.ts  overlay-harness.ts  overlay.test.ts  screenshot.test.ts  storage.test.ts
tests/unit/: health.test.ts
tests/unit/anchor/: anchor.test.ts  text-anchor.test.ts
tests/unit/capture/: composite.test.ts  daemon-sink.test.ts  render.test.ts
tests/unit/core/agent/: connection.test.ts
tests/unit/embed/: local-submit.test.ts  mount.test.ts  storage.test.ts  widget.test.ts
tests/unit/export/: binding-sink.test.ts  export.test.ts
tests/unit/links/: links.test.ts
tests/unit/markdown/: markdown.test.ts
tests/unit/model/: changelog.test.ts
tests/unit/overlay/: geometry.test.ts
tests/unit/panel/: ChangelogPanel.test.tsx  PanelApp.test.tsx  keyboard-isolation.test.ts
tests/unit/selector/: selector.property.test.ts  selector.test.ts
tests/unit/share/: import.test.ts  share.test.ts  token.test.ts
tests/unit/theme/: apply-theme.test.ts
tests/unit/ui/: use-copy.test.ts
tests/unit/version/: version.test.ts
website/: .gitignore  astro.config.mjs  package-lock.json  package.json
website/public/: CNAME  demo-annotate.webm
website/src/: content.config.ts
website/src/styles/: custom.css
