[package]
name = "share-the-mark"
version = "0.2.0"
edition = "2021"
description = "share-the-mark CLI: receive design-feedback change-briefs from the browser extension and expose them to a coding agent"
license = "MIT"
repository = "https://github.com/mpecan/share-the-mark"
build = "build.rs"
# `include` makes packaging EXCLUSIVE — anything unlisted is dropped from the crate.
# `skill/**/*` and the `embed/*` artifacts are loaded via include_str!/include_bytes!,
# so they MUST be listed. The `embed/*` files are gitignored (built, not committed) but
# `include` packages them regardless of VCS, so `cargo install` from crates.io embeds
# them (the publish job vendors them there; see release-cli.yml).
include = [
  "src/**/*",
  "skill/**/*",
  "embed/local.global.js",
  "embed/playwright-runner.mjs",
  "build.rs",
  "Cargo.toml",
]

[[bin]]
name = "share-the-mark"
path = "src/main.rs"

# `cargo binstall` downloads the prebuilt binary from the GitHub Release the
# `release-cli.yml` workflow publishes (tag `cli-v<version>`, assets named
# `share-the-mark-<target>.<archive>` with the binary at the archive root).
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/{ name }-{ target }.{ archive-format }"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
clap = { version = "4", features = ["derive"] }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
base64 = "0.22"
directories = "5"
ctrlc = "3"
# Blocking HTTP client for daemon lifecycle calls (loopback only, no TLS needed).
ureq = { version = "2", default-features = false, features = ["json"] }
# Cross-platform "open this URL in the default browser" for `share-the-mark request`.
open = "5"

[dev-dependencies]
tempfile = "3"
